--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "workout_managment_system_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend API for workout management system",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "author": "",
+  "keywords": [],
+  "author": "Sergey Belov",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
@@ -20,13 +21,14 @@
     "moment": "^2.30.1",
     "mongoose": "^8.15.1",
     "node-cron": "^4.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.11.30"
   }
 }
