--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,25 @@
+// {
+//   "compilerOptions": {
+//     "target": "ES6",
+//     "module": "commonjs",
+//     "rootDir": "src",
+//     "outDir": "dist",
+//     "strict": true,
+//     "esModuleInterop": true
+//   }
+// }
+
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
-    "strict": true,
-    "esModuleInterop": true
-  }
+    "target": "ES2020", // Лучше поддержка async/await
+    "module": "CommonJS", // ОК для Node.js
+    "rootDir": "src", // Исходный код
+    "outDir": "dist", // Компилируемый код
+    "strict": true, // Полный strict-mode
+    "esModuleInterop": true, // Позволяет импортировать commonjs модули
+    "skipLibCheck": true, // Убирает лишние ошибки в node_modules
+    "forceConsistentCasingInFileNames": true // Предотвращает баги на Windows/Linux
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
