--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,5 +1,2 @@
-[phases.setup]
-nixpkgs = ["nodejs", "nodePackages.typescript"]
-
-[start]
-cmd = "npm run start"
+[phases.install]
+  cmds = ['npm install --legacy-peer-deps']
